--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "date-fns": "^1.29.0",
     "express": "^4.16.3",
     "request": "^2.87.0"
   },
